spikes/traefik-ingressroute-crd/ngsa-memory.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: mock
  labels:
    name: mock
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ngsa-memory
  namespace: mock
  labels:
    app.kubernetes.io/name: ngsa-memory
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ngsa-memory
  template:
    metadata:
      labels:
        app: ngsa-memory
        version: beta-0329-1641
        deploy: 21-03-29-16-41-59
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '8080'
    spec:
      containers:
        - name: app
          image: ghcr.io/retaildevcrews/ngsa-app:beta
          imagePullPolicy: Always

          args: 
          - --in-memory
          - --prometheus
          - --url-prefix 
          - /mock
          # For now using dev zones 
          # - --zone
          # - az-central
          # - --region
          # - Central

          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
      # Added Node Selector
      # Since we have two node pools for PnP cluster
      nodeSelector:
        agentpool: npuser01

---
apiVersion: v1
kind: Service
metadata:
  name: ngsa-mock-memory
  namespace: mock
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: ngsa-memory
---
