spikes/traefik-ingressroute-crd/ingressroute-middleware.yaml
---
# Middleware definition for ngsa-mock-memory
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: mock-middleware
  namespace: mock
spec:
  stripPrefix:
    prefixes:
      - /mock
---
# Traefik IngressRoute instead of k8s Ingress
# TODO: Can I do it without the internal host information
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: mock-route
  namespace: mock
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`bu0001a0008-00.ngsa-monitoring-dev.com`) && PathPrefix(`/mock`)
    kind: Rule
    middlewares:
    - name: mock-middleware
      namespace: mock
    services:
    - kind: Service
      name: ngsa-mock-memory
      namespace: mock
      port: 8080
---
